# P10

./: FEATURE_MATRIX.md  IMPLEMENTATION_SUMMARY.md  NEW_FEATURES.md  QUICK_REFERENCE.md  README.md  chart_generator.py  config.py  content_enhancer.py  export_utils.py  file_reader.py  image_extractor.py  llm_client.py  llm_providers.py  main.py  pptx_generator.py  pyproject.toml  sample_input.md  sample_input.pptx  second example.pptx
pptx/: first example.pptx  second example.pptx
